search needs improvement